# cognitive-brain-align

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
config/: pythia_config.yaml
debug/: check_data.py  check_preason.py  debug_data.py
scripts/: analyze_pythia_results.py  setup_environment.py  task_scaling_plots.py
scripts/cogbench_setup/: batch_evaluate_mamba.py  batch_evaluate_pythia.py  combined_batch_evaluate.py
src/cogbench_eval/: __init__.py  hf_handler.py
tests/: __init__.py
